2014-05-10  Araki Ken  <arakiken@users.sf.net>

	* inputmethod/fcitx: Added.

	* configure.in: --enable-fcitx option is added.

2014-05-05  Araki Ken  <arakiken@users.sf.net>

	* ml_vt100_parser.c: The hack of continuing sixel sequence by FF, GS, RS and US
	  after ST is removed.

	* x_draw_str.c: INLINEPIC_ID and INLINEPIC_POS are defined. (Not in x_picture.h)

	* x_picture.c, x_screen.c: Following macros in ml_char.h are used.

	* ml_char.h:
	  - PICTURE_ID_BITS and PICTURE_POS_BITS are defined. (Not in x_picture.h)
	  - ml_char_combine_picture(), ml_char_picture_id() and ml_char_set_picture_id()
	    macros are defined.

	* x_picture.h: INLINEPIC_ID_SHIFT, INLINEPIC_ID and INLINEPIC_POS macros
	  are removed.

2014-05-02  Araki Ken  <arakiken@users.sf.net>

	* x_display_wscons.c: WSDISPLAYIO_MODE_DUMBFB is used instead of
	  WSDISPLAYIO_MODE_MAPPED on NetBSD.

	* x_font_ft.c: cairo_matrix_init_identity() + cairo_matrix_scale()
	  => cairo_matrix_init_scale().

2014-04-26  Araki Ken  <arakiken@users.sf.net>

	* x_draw_str.c: The margin area of transparent frame of animation gif is
	  never cleared.

	* version.h.in: 3.3.5 -> 3.3.5post

2014-04-26  Araki Ken  <arakiken@users.sf.net>

	* 3.3.5 released.
	  (tag "rel-3_3_5")

	* configure.in, mlterm.spec, main/version.h.in,
	  MLTermPty.c, android/jni/version.h, doc/en/ReleaseNote:
	  updated for 3.3.5.

2014-04-25  Araki Ken  <arakiken@users.sf.net>

	* x_font_ft.c: The default width of proportional fonts is changed from the
	  width of 'N' to 'M'.

	* xlib/x_window.c: win->is_focused is always true on override redirect mode
	  in order not to call XSetInputFocus() in pressing input method window.

	* x_im_candidate_screen.c, x_im_status_screen.c:
	  Even if window is unfocused hide() always calls x_window_unmap() in order
	  to hide input method window as soon as preedit string is removed all.

2014-04-24  Araki Ken  <arakiken@users.sf.net>

	* c_imagelib.c: The error of compiling mlimgloader/none.c is fixed.
